8012182: Add information about class loading and unloading to event based tracing framework Reviewed-by: coleenp, dholmes, sspitsyn Contributed-by: calvin.cheung@oracle.com